--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     /* Coming Soon Section */
     .coming-soon {
         background: #000000;
-        text color: white;
+        text color: #ffffff;
         text-align: center;
     }
 
