--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     /* Coming Soon Section */
     .coming-soon {
         background: #000000;
-        text color: #ffffff;
+        color: white;
         text-align: center;
     }
 
@@ -782,7 +782,7 @@
     <!-- Coming Soon Section -->
     <section class="front-page-section coming-soon">
         <div class="container">
-            <h2 class="section-title">Coming <span class="accent">Soon</span></h2>
+            <h2 class="section-title"> <span class="accent">Coming Soon</span></h2>
             <p style="font-size: 1.2rem; margin-bottom: 2rem;">Exciting new products and services launching soon!</p>
             
             <div class="coming-soon-grid">
