--- a/index.html
+++ b/index.html
@@ -64,35 +64,13 @@
         position: relative;
     }
 
-    /* Custom N Logo with red globe */
-    .logo-n {
-        color: white;
-        font-size: 28px;
-        font-weight: bold;
-        position: relative;
-    }
 
-    .logo-globe {
-        position: absolute;
-        top: -5px;
-        right: -8px;
-        width: 12px;
-        height: 12px;
-        background: #ff2c2c;
-        border-radius: 50%;
-        border: 2px solid #ff2c2c;
-    }
+/* Style for the image inside the container */
+.logo-icon .logo-img {
+    max-width: 100%; /* Ensures the image fits within the container */
+    height: auto;
+}
 
-    .logo-globe::before {
-        content: '';
-        position: absolute;
-        top: 2px;
-        left: 2px;
-        right: 2px;
-        bottom: 2px;
-        border-radius: 50%;
-        border: 1px solid white;
-    }
 
     .nav-links {
         display: flex;
@@ -710,9 +688,9 @@
     <header>
         <nav class="container">
             <div class="logo">
-                <div class="logo-icon">
-                    <div class="logo-n">N<div class="logo-globe"></div></div>
-                </div>
+            <div class="logo-icon">
+    <img src="images/niilaverse-logo.png" alt="Niilaverse Logo" class="logo-img">
+</div>
                 NIILAVERSE
             </div>
             <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">☰</button>
