--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
         <nav class="container">
             <div class="logo">
             <div class="logo-icon">
-    <img src="main/niilaverse-logo.png" alt="Niilaverse Logo" class="logo-img">
+    <img src="niilaverse-logo.png" alt="Niilaverse Logo" class="logo-img">
 </div>
                 NIILAVERSE
             </div>
